added tenant registration page
